@@ -1,3 +1,10 @@
+2005-07-10 Braden McDaniel  <braden@endoframe.com>
+
+	Doc-comment improvements.
+
+	* src/libopenvrml/openvrml/browser.cpp
+	* src/libopenvrml/openvrml/vrml97node.cpp
+
 2005-07-07 Braden McDaniel  <braden@endoframe.com>
 
 	Clean-up of inclusions.
